[gd_scene load_steps=7 format=3 uid="uid://d3nq10pjxpq1r"]

[ext_resource type="Script" path="res://Scripits/Enemy/grunt_shell.gd" id="1_ame7a"]
[ext_resource type="Script" path="res://Scripits/health.gd" id="2_n6ky5"]
[ext_resource type="SpriteFrames" uid="uid://bek76am48n6e2" path="res://Objects/enemy_spawn_animations/default_spawn.tres" id="3_sc8cm"]
[ext_resource type="Script" path="res://Scripits/Enemy/grunt_enemy_ai.gd" id="4_rm6ff"]
[ext_resource type="Texture2D" uid="uid://bu4gytatdr6w1" path="res://Art/Enemies/ember_shard_small.png" id="5_27b8v"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ek03a"]
radius = 8.0
height = 32.0

[node name="Grunt" type="Node2D"]
script = ExtResource("1_ame7a")

[node name="Health" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_n6ky5")

[node name="SlowTimer" type="Timer" parent="."]
one_shot = true

[node name="SpawnAnimation" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
visible = false
sprite_frames = ExtResource("3_sc8cm")

[node name="Body" type="CharacterBody2D" parent="."]
unique_name_in_owner = true
collision_layer = 2
collision_mask = 33
script = ExtResource("4_rm6ff")

[node name="Sprite" type="Sprite2D" parent="Body"]
unique_name_in_owner = true
texture_filter = 1
texture = ExtResource("5_27b8v")

[node name="ColliderShape" type="CollisionShape2D" parent="Body"]
unique_name_in_owner = true
shape = SubResource("CapsuleShape2D_ek03a")
debug_color = Color(0.968627, 0.101961, 0.380392, 0.419608)

[node name="NavAgent" type="NavigationAgent2D" parent="Body"]
unique_name_in_owner = true

[node name="MovementTimer" type="Timer" parent="Body"]
wait_time = 0.1

[connection signal="died" from="Health" to="." method="_on_health_died"]
[connection signal="timeout" from="Body/MovementTimer" to="Body" method="make_path"]
